--- a/make.conf
+++ b/make.conf
@@ -12,10 +12,10 @@ ACCEPT_KEYWORDS="~amd64"
 INPUT_DEVICES="keyboard mouse evdev"
 VIDEO_CARDS="amdgpu radeonsi"
 
-USE="X bzip2 threads -ldap -tk ntpl -nls ntplonly kpathsea -qt -qt4 -qt5 -gtk -systemd consolekit \
-     ffmpeg fftw pulseaudio static-libs jpeg jpeg2k png svg cairo pango"
+USE="X bzip2 threads -ldap -tk ntpl -nls ntplonly kpathsea -qt -qt4 -qt5 -gtk -systemd \
+     ffmpeg fftw -pulseaudio static-libs jpeg jpeg2k png svg cairo pango"
 
-USE_PYTHON="2.7 3.6"
+USE_PYTHON="2.7 3.8"
 RUBY_TARGETS="ruby22 ruby24 ruby25"
 
 LINGUAS="en_US"
